--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,15 +50,18 @@ futures-intrusive = "0.5.0"
 parking_lot = "0.12"
 smallvec = "1.8.0"
 vello_encoding = { path = "crates/encoding" }
+wgpu-profiler = { workspace = true, optional = true }
 
 [workspace.dependencies]
 bytemuck = { version = "1.12.1", features = ["derive"] }
 fello = { git = "https://github.com/dfrg/fount", rev = "58a284eaae67512fb61cf76177c5d33238d79cb1" }
 peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }
-wgpu = "0.16" # NOTE: Make sure to keep this in sync with the version badge in README.md
+wgpu = "0.16"                                                                                               # NOTE: Make sure to keep this in sync with the version badge in README.md
+
 
 # Used for examples
 clap = "4.1.0"
 anyhow = "1.0"
-instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }
+instant = { version = "0.1.12", features = ["wasm-bindgen"] }
 pollster = "0.3.0"
+wgpu-profiler = "0.12.1"
