--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "segment": "${workspaceFolder}/shader/shared/segment.wgsl",
     "tile": "${workspaceFolder}/shader/shared/tile.wgsl",
     "transform": "${workspaceFolder}/shader/shared/transform.wgsl"
+    "util": "${workspaceFolder}/shader/shared/util.wgsl",
   },
   "wgsl-analyzer.diagnostics.nagaVersion": "main",
   "wgsl-analyzer.preprocessor.shaderDefs": [
