--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -17,7 +17,7 @@ vello = { path = "../../" }
 scenes = { path = "../scenes" }
 
 wgpu = { workspace = true }
-pollster = "0.2.5"
+pollster = { workspace = true }
 env_logger = "0.10.0"
 png = "0.17.7"
 futures-intrusive = "0.5.0"
