--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -2,6 +2,7 @@
 name = "vello_shaders"
 version = "0.1.0"
 edition = "2021"
+license.workspace = true
 
 [features]
 default = ["compile", "wgsl", "msl"]
