--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "vello_shaders"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
 license.workspace = true
+repository.workspace = true
 
 [features]
 default = ["compile", "wgsl", "msl"]
