--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -8,6 +8,17 @@ repository.workspace = true
 [features]
 default = ["compile", "wgsl", "msl"]
 compile = ["naga", "thiserror"]
+
+# Enabling this feature applies a transformation that converts all storage bindings
+# to have the `read_write` access mode. For WGSL shaders, this affects the bind group
+# layout of all pipelines and changes the usage scope of storage buffers. For MSL shaders,
+# this removes the `const` qualifier from entry-point parameters in the `device` address
+# space.
+#
+# Enabling this feature may have a performance impact and is not recommended.
+force_rw_storage = []
+
+# Target shading language variants of the vello shaders to link into the library.
 wgsl = []
 msl = []
 
