--- a/examples/scenes/Cargo.toml
+++ b/examples/scenes/Cargo.toml
@@ -20,6 +20,7 @@ rand = "0.8.5"
 instant = { workspace = true }
 
 # Used for the `download` command
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 byte-unit = "4.0"
 dialoguer = "0.10"
 ureq = "2.6"
