debug_layers feature
This introduces a new debug module and DebugLayers data structure that
can render debug visualizations of GPU buffers that are internal to the
vello pipeline. This currently supports a line-based visualization of
the LineSoup and PathBbox buffers.

The debug visualization depends on CPU read-back of the BumpAllocators
buffer to issue a draw call. This could technically be avoided with an
indirect draw but the visualizations will eventually include CPU-side
processing and validation.

The draws are recorded to the same Recording as the blit in
`render_to_texture_async`. The buffers that are used by the draw
commands are temporarily retained outside of the `Render` data
structure. These buffers are currently released back to the engine
explicitly and in various places in code since safe resource removal
currently requires a Recording.

--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -16,6 +16,7 @@ default = ["wgpu-profiler"]
 # Enable the use of wgpu-profiler. This is an optional feature for times when we use a git dependency on
 # wgpu (which means the dependency used in wgpu-profiler would be incompatible)
 wgpu-profiler = ["dep:wgpu-profiler", "vello/wgpu-profiler"]
+debug_layers = ["vello/debug_layers"]
 
 [lints]
 workspace = true
@@ -24,6 +25,7 @@ workspace = true
 # Stop the PDB collision warning on windows
 name = "with_winit_bin"
 path = "src/main.rs"
+
 
 [dependencies]
 vello = { workspace = true, features = ["buffer_labels"] }
