--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ default = ["wgpu"]
 bump_estimate = ["vello_encoding/bump_estimate"]
 hot_reload = []
 buffer_labels = []
+debug_layers = []
 
 [dependencies]
 bytemuck = { workspace = true }
