--- a/vello/Cargo.toml
+++ b/vello/Cargo.toml
@@ -16,6 +16,7 @@ default = ["wgpu"]
 # bump-allocated GPU memory.
 # TODO: Turn this into a runtime option used at resolve time and remove the feature.
 bump_estimate = ["vello_encoding/bump_estimate"]
+debug_layers = []
 hot_reload = ["vello_shaders/compile"]
 buffer_labels = []
 wgpu = ["dep:wgpu"]
