[shaders] Don't apply force_rw_storage to fine
The force_rw_storage feature is a hack that enables a renderer to bind
suballocations from the same buffer object to both readonly and
read-write bindings inside a pipeline layout.

The AA variants of the fine stage don't compile with this feature
enabled, since the read-write PTCL buffer results in a uniformity
analysis failure.

Address this by excluding the `fine` stage from the force_rw_storage
feature to preserve the shader's correctness. Since all storage bindings
in `fine` are readonly, there is no restriction against binding
suballocations to any of the fine pipeline variants in the first place.

--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -13,7 +13,11 @@ compile = ["naga", "thiserror"]
 # to have the `read_write` access mode. For WGSL shaders, this affects the bind group
 # layout of all pipelines and changes the usage scope of storage buffers. For MSL shaders,
 # this removes the `const` qualifier from entry-point parameters in the `device` address
-# space.
+# space. This allows bindings with mixed access modes to be backed by suballocations from
+# the same the buffer object.
+#
+# This feature doesn't apply to the fine stage where all storage bindings are readonly and
+# the same access mode restrictions do not apply.
 #
 # Enabling this feature may have a performance impact and is not recommended.
 force_rw_storage = []
