Replace fello with skrifa for font rendering
This replaces our bespoke fello lib with skrifa from crates.io which brings us one step closer to being able to release.

Causes a slight regression since we no longer support hinting but that will be fixed when support lands upstream (soon!)

--- a/crates/encoding/Cargo.toml
+++ b/crates/encoding/Cargo.toml
@@ -9,10 +9,10 @@ repository.workspace = true
 default = ["full"]
 # Enables support for the full pipeline including late-bound
 # resources (gradients, images and glyph runs)
-full = ["fello", "guillotiere"]
+full = ["skrifa", "guillotiere"]
 
 [dependencies]
 bytemuck = { workspace = true }
-fello = { workspace = true, optional = true }
+skrifa = { workspace = true, optional = true }
 peniko = { workspace = true }
 guillotiere = { version = "0.6.2", optional = true }
