--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ buffer_labels = []
 
 [dependencies]
 bytemuck = { workspace = true }
-fello = { workspace = true }
+skrifa = { workspace = true }
 peniko = { workspace = true }
 wgpu = { workspace = true, optional = true }
 raw-window-handle = "0.5"
@@ -57,7 +57,7 @@ kurbo = "0.10.4"
 
 [workspace.dependencies]
 bytemuck = { version = "1.12.1", features = ["derive"] }
-fello = { git = "https://github.com/dfrg/fount", rev = "dadbcf75695f035ca46766bfd60555d05bd421b1" }
+skrifa = "0.15.4"
 peniko = { git = "https://github.com/linebender/peniko", rev = "629fc3325b016a8c98b1cd6204cb4ddf1c6b3daa" }
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
