Use Vello capitalization scheme in doc and strings

--- a/integrations/vello_svg/Cargo.toml
+++ b/integrations/vello_svg/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vello_svg"
-description = "Render a usvg document to a vello scene"
+description = "Render a usvg document to a Vello scene"
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics", "vello"]
 
