--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,6 @@ members = [
 edition = "2021"
 version = "0.0.1"
 license = "MIT OR Apache-2.0"
-# homepage = "https://vello.dev" - Domain owned by us, but unused at present
-# rust-version = 
 repository = "https://github.com/linebender/vello"
 
 [package]
@@ -50,15 +48,11 @@ raw-window-handle = "0.5"
 futures-intrusive = "0.5.0"
 vello_encoding = { path = "crates/encoding" }
 wgpu-profiler = { workspace = true, optional = true }
-# Note: we pick up a kurbo dependency transitively through peniko.
-# However, we need at least version 0.10.4 for proper stroking.
-# Next time we bump peniko, this can be removed.
-kurbo = "0.10.4"
 
 [workspace.dependencies]
 bytemuck = { version = "1.12.1", features = ["derive"] }
 skrifa = "0.15.4"
-peniko = { git = "https://github.com/linebender/peniko", rev = "8717635681dedfab3e9f3741fcbc7f3318a82ff0" }
+peniko = "0.1.0"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.18" }
