--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ bytemuck = { workspace = true }
 skrifa = { workspace = true }
 peniko = { workspace = true }
 wgpu = { workspace = true, optional = true }
+log = { workspace = true }
 raw-window-handle = { workspace = true }
 futures-intrusive = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
@@ -66,7 +67,7 @@ raw-window-handle = "0.6.0"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19.3" }
-
+log = "0.4.20"
 
 # Used for examples
 clap = "4.5.1"
