--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -28,7 +28,7 @@ wgpu-profiler = { workspace = true }
 wgpu = { workspace = true }
 winit = "0.29.12"
 env_logger = "0.11.2"
-log = "0.4.21"
+log = { workspace = true }
 
 [target.'cfg(not(any(target_arch = "wasm32", target_os = "android")))'.dependencies]
 vello = { path = "../../", features = ["hot_reload"] }
@@ -38,10 +38,11 @@ notify-debouncer-mini = "0.3"
 [target.'cfg(target_os = "android")'.dependencies]
 winit = { version = "0.29.12", features = ["android-native-activity"] }
 android_logger = "0.13.3"
+jni = "0.21"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
 console_log = "1.0.0"
 wasm-bindgen-futures = "0.4.41"
-web-sys = { version = "0.3.67", features = [ "HtmlCollection", "Text" ] }
+web-sys = { version = "0.3.67", features = ["HtmlCollection", "Text"] }
 getrandom = { version = "0.2.12", features = ["js"] }
