--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
 
     "examples/headless",
     "examples/with_winit",
-    "examples/with_bevy",  # Disable for now until bevy is using wpgu 0.19
+    "examples/with_bevy",
     "examples/run_wasm",
     "examples/scenes",
 ]
