--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -41,6 +41,7 @@ notify-debouncer-mini = "0.3"
 [target.'cfg(target_os = "android")'.dependencies]
 winit = { version = "0.29.10", features = ["android-native-activity"] }
 android_logger = "0.13.0"
+jni = "0.21"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 console_error_panic_hook = "0.1.7"
@@ -49,5 +50,5 @@ wasm-bindgen-futures = "0.4.33"
 # Note: pin web-sys to 0.3.67 because wgpu 0.19 depends on that exact version.
 # Update this when revving wgpu. Remove pin when wgpu no longer demands it.
 # See https://github.com/gfx-rs/wgpu/pull/5224 for more info.
-web-sys = { version = "=0.3.67", features = [ "HtmlCollection", "Text" ] }
+web-sys = { version = "=0.3.67", features = ["HtmlCollection", "Text"] }
 getrandom = { version = "0.2.10", features = ["js"] }
