--- a/examples/shapes/Cargo.toml
+++ b/examples/shapes/Cargo.toml
@@ -4,10 +4,14 @@ edition.workspace = true
 version.workspace = true
 license.workspace = true
 repository.workspace = true
+publish = false
 
+# The dependencies here are independent from the workspace versions
 [dependencies]
 anyhow = "1.0.80"
 pollster = "0.3.0"
 wgpu = "0.19.1"
 winit = "0.29.10"
-vello = { git = "https://github.com/linebender/vello" }
+vello = { path = "../../" }
+# When using, replace the above line with this:
+#vello = { git = "https://github.com/linebender/vello" }
