Prepare package configurations for publishing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 resolver = "2"
-
 members = [
     "crates/encoding",
     "crates/shaders",
@@ -18,22 +17,20 @@ members = [
 
 [workspace.package]
 edition = "2021"
-version = "0.0.1"
-license = "MIT OR Apache-2.0"
+rust-version = "1.75"
+license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
 
 [package]
 name = "vello"
-description = "An experimental GPU compute-centric 2D renderer"
+version = "0.1.0"
+description = "An experimental GPU compute-centric 2D renderer."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
-
-# This crate is intended for publishing, but not ready yet
-publish = false
-
-version.workspace = true
-license.workspace = true
+exclude = ["/.github/", "/doc/", "/examples/", ".gitignore"]
 edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
 repository.workspace = true
 
 [features]
@@ -42,19 +39,22 @@ hot_reload = []
 buffer_labels = []
 
 [dependencies]
+vello_encoding = { workspace = true }
 bytemuck = { workspace = true }
 skrifa = { workspace = true }
 peniko = { workspace = true }
 wgpu = { workspace = true, optional = true }
-raw-window-handle = "0.6"
-futures-intrusive = "0.5.0"
-vello_encoding = { path = "crates/encoding" }
+raw-window-handle = { workspace = true }
+futures-intrusive = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 
 [workspace.dependencies]
+vello_encoding = { version = "0.1.0", path = "crates/encoding" }
 bytemuck = { version = "1.14.3", features = ["derive"] }
 skrifa = "0.15.5"
 peniko = "0.1.0"
+futures-intrusive = "0.5.0"
+raw-window-handle = "0.6"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19" }
