--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -1,23 +1,19 @@
 [package]
 name = "headless"
-description = "An example showing how to use `vello` to create raster images"
+description = "An example showing how to use `vello` to create raster images."
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
 publish = false
 
-version.workspace = true
-license.workspace = true
-edition.workspace = true
-repository.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-anyhow = { workspace = true }
-clap = { workspace = true, features = ["derive"] }
 vello = { path = "../../" }
 scenes = { path = "../scenes" }
+anyhow = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
 
 wgpu = { workspace = true }
 pollster = { workspace = true }
 env_logger = "0.11.2"
 png = "0.17.13"
-futures-intrusive = "0.5.0"
+futures-intrusive = { workspace = true }
