--- a/examples/with_bevy/Cargo.toml
+++ b/examples/with_bevy/Cargo.toml
@@ -1,15 +1,13 @@
 [package]
 name = "with_bevy"
-description = "Example of using Vello in a Bevy application"
-
-version.workspace = true
-license.workspace = true
+description = "Example of using Vello in a Bevy application."
 edition.workspace = true
+license.workspace = true
 repository.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
+vello = { path = "../../" }
 bevy = { version = "0.13", features = [
   "bevy_winit",
   "bevy_core_pipeline",
@@ -19,5 +17,3 @@ bevy = { version = "0.13", features = [
   "x11",
   "tonemapping_luts",
 ], default-features = false }
-
-vello = { path = "../../" }
