--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ members = [
     "examples/with_bevy",
     "examples/run_wasm",
     "examples/scenes",
-    "examples/shapes",
+    "examples/simple",
 ]
 
 [workspace.package]
