Prepare package configurations for publishing. (#478)
* Prepare package configurations for publishing.

* Add a version field to `with_winit` to appease cargo-apk.

* Remove backticks from package description.

* Change the tests package description.

* Add workspace version for unified version numbering.

* Fix typo.

* Tweak some comments.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 resolver = "2"
-
 members = [
     "crates/encoding",
     "crates/shaders",
@@ -17,23 +16,29 @@ members = [
 ]
 
 [workspace.package]
+# Vello version, also used by other packages which want to mimic Vello's version.
+# Right now those packages include vello_encoding and vello_shaders.
+#
+# NOTE: When bumping this, remember to also bump the aforementioned other packages'
+#       version in the dependencies section at the bottom of this file.
+#       Additionally, bump the Vello dependency version in the 'simple' example.
+version = "0.1.0"
+
 edition = "2021"
-version = "0.0.1"
-license = "MIT OR Apache-2.0"
+rust-version = "1.75"
+license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
 
 [package]
 name = "vello"
-description = "An experimental GPU compute-centric 2D renderer"
+version.workspace = true
+description = "An experimental GPU compute-centric 2D renderer."
 categories = ["rendering", "graphics"]
 keywords = ["2d", "vector-graphics"]
-
-# This crate is intended for publishing, but not ready yet
-publish = false
-
-version.workspace = true
-license.workspace = true
+exclude = ["/.github/", "/doc/", "/examples/", ".gitignore"]
 edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
 repository.workspace = true
 
 [features]
@@ -42,19 +47,22 @@ hot_reload = []
 buffer_labels = []
 
 [dependencies]
+vello_encoding = { workspace = true }
 bytemuck = { workspace = true }
 skrifa = { workspace = true }
 peniko = { workspace = true }
 wgpu = { workspace = true, optional = true }
-raw-window-handle = "0.6"
-futures-intrusive = "0.5.0"
-vello_encoding = { path = "crates/encoding" }
+raw-window-handle = { workspace = true }
+futures-intrusive = { workspace = true }
 wgpu-profiler = { workspace = true, optional = true }
 
 [workspace.dependencies]
+vello_encoding = { version = "0.1.0", path = "crates/encoding" }
 bytemuck = { version = "1.14.3", features = ["derive"] }
 skrifa = "0.15.5"
 peniko = "0.1.0"
+futures-intrusive = "0.5.0"
+raw-window-handle = "0.6"
 
 # NOTE: Make sure to keep this in sync with the version badge in README.md
 wgpu = { version = "0.19" }
