--- a/crates/shaders/Cargo.toml
+++ b/crates/shaders/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "vello_shaders"
-version = "0.1.0"
+version.workspace = true # We mimic Vello's version
+description = "Vello infrastructure to preprocess and cross-compile shaders at compile time."
 edition.workspace = true
+rust-version.workspace = true
 license.workspace = true
 repository.workspace = true
+
+publish = false # Remove this when the package is ready for publishing
 
 [features]
 default = ["compile", "wgsl", "msl"]
