--- a/examples/with_winit/Cargo.toml
+++ b/examples/with_winit/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
 name = "with_winit"
+version = "0.0.0"
 description = "An example using vello to render to a winit window"
-publish = false
-
-version.workspace = true
-license.workspace = true
 edition.workspace = true
+license.workspace = true
 repository.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [lib]
 name = "with_winit"
