--- a/examples/headless/Cargo.toml
+++ b/examples/headless/Cargo.toml
@@ -17,3 +17,6 @@ pollster = { workspace = true }
 env_logger = "0.11.2"
 png = "0.17.13"
 futures-intrusive = { workspace = true }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+getrandom = { version = "0.2.12", features = ["js"] }
