--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ members = [
 version = "0.1.0"
 
 edition = "2021"
-rust-version = "1.75"
+rust-version = "1.75" # Keep in sync with CI and the relevant README.md files.
 license = "Apache-2.0 OR MIT"
 repository = "https://github.com/linebender/vello"
 
